# Compactor

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
hashfilter/: Cargo.toml
hashfilter/src/: lib.rs
src/: backend.rs  background.rs  compact.rs  compression.rs  compresstimate.rs  compresstinate.rs  config.rs  console.rs  filesdb.rs  folder.rs  gui.rs  main.rs  persistence.rs  settings.rs  ui.html
src/ui/: app.js  head.html  index.html  rest.html  style.css
