[package]
name = "compactor"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

[dependencies]
# web-view = "0.4.0"
web-view = { path = "../web-view/" }
ignore = "0.4"
glob = "0.3"
filesize = "0.1"
lazy_static = "1.3.0"
winapi = { version = "0.3.7", features = ["knownfolders", "shtypes", "winerror", "winbase", "shellscalingapi", "combaseapi", "shlobj"] }
crossbeam-channel = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
open = "1.2.2"
