[package]
name = "compactor"
version = "0.7.1"
authors = ["Thomas Hurst <tom@hur.st>"]
homepage = "https://github.com/Freaky/Compactor"
description = "An interface to Windows 10 filesystem compression"
edition = "2018"
license = "MIT"

[dependencies]
backtrace = "0.3.32"
compresstimator = { git = "https://github.com/Freaky/compresstimator.git", rev = "26ddd3f499bc46f2c8b3ce814e9723ed41b47919" }
crossbeam-channel = "0.3"
ctrlc = "3.0"
directories = "2.0.1"
dirs-sys = "0.3.3"
filesize = "0.1"
fs2 = "0.4.3"
glob = "0.3"
globset = "0.4"
hashfilter = { path = "hashfilter" }
humansize = "1.1.0"
lazy_static = "1.3.0"
open = "1.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "0.3.0"
walkdir = "2.2.8"
web-view = { git = "https://github.com/Freaky/web-view.git", rev = "87a108fba963e701dc71a16d2f60ac54d96a09b5" }
winapi = { version = "0.3.7", features = [ "combaseapi", "ioapiset", "knownfolders", "shellscalingapi", "shlobj", "shtypes", "winbase", "winerror", "winioctl", "winver"] }

[[bin]]
name = "Compactor"
path = "src/main.rs"

[build-dependencies]
vergen = "3"
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = false

[dev-dependencies]
tempdir = "0.3.7"

[workspace]
members = [
  "hashfilter"
]
